distinct: spliterator implementation selected as it proved to be faster